--- a/Abgabe1_COMET_WiSe2425.tex
+++ b/Abgabe1_COMET_WiSe2425.tex
@@ -10,7 +10,7 @@
 \usepackage{natbib}
 
 \title{Abgabe 1 für Computergestützte Methoden}
-\author{Gruppe: 70, Namen: Jakob Striegel, Marvin Mundhenke, Xhoi Dragoj}
+\author{Gruppe: 70, Namen: Jakob Striegel, Marvin Mundhenke, Xhoi Dragoj (3983991)}
 \date{01.12.2024}
 \begin{document}
 \maketitle
